kind/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dev-gateway
spec:
  gatewayClassName: dev-nginx
  listeners:
    - name: wildcard-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dev-gateway-access: "true"
    - name: localhost-https
      protocol: HTTPS
      port: 443
      hostname: "localhost"
      tls:
        certificateRefs:
          - kind: Secret
            name: localhost-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dev-gateway-access: "true"
    - name: wildcard-localhost-https
      protocol: HTTPS
      port: 443
      hostname: "*.localhost"
      tls:
        certificateRefs:
          - kind: Secret
            name: localhost-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dev-gateway-access: "true"
    - name: ip-https
      protocol: HTTPS
      port: 443
      hostname: 127.0.0.1
      tls:
        certificateRefs:
          - kind: Secret
            name: localhost-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dev-gateway-access: "true"
